--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,8 @@ jobs:
   - name: terraform apply
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     run: terraform apply -auto-approve tfplan
-    
+  - name: terraform destroy
+    run: terraform destroy --auto-approve
     
 
          
