fix: add dependency on terraform-apply for terraform-destroy job and ignore tfplan in .gitignore

--- a/.github/workflows/terraform_v1.yml
+++ b/.github/workflows/terraform_v1.yml
@@ -108,6 +108,7 @@ jobs:
 
   terraform-destroy:
     name: Terraform Destroy on PR Close
+    needs: terraform-apply
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == false && github.event.action == 'closed'
 
