fix: remove -auto-approve flag from terraform apply command

--- a/.github/workflows/terraform_v1.yml
+++ b/.github/workflows/terraform_v1.yml
@@ -96,7 +96,7 @@ jobs:
           path: .
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply tfplan
 
       - name: Cleanup
         run: |
