--- a/.github/workflows/terraform_v1.yml
+++ b/.github/workflows/terraform_v1.yml
@@ -63,7 +63,6 @@ jobs:
         with:
           name: tfplan
           path: tfplan
-
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
@@ -89,6 +88,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Terraform Init
+        run: terraform init
+
       - name: Download Plan Artifact
         uses: actions/download-artifact@v4
         with:
@@ -96,7 +98,7 @@ jobs:
           path: .
 
       - name: Terraform Apply
-        run: terraform apply tfplan
+        run: terraform apply -auto-approve tfplan
 
       - name: Cleanup
         run: |
