fix: specify variable file for Terraform plan execution

--- a/.github/workflows/terraform_v1.yml
+++ b/.github/workflows/terraform_v1.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: |
-          terraform plan -out=tfplan
+          terraform plan -var-file=dev.tfvars -out=tfplan
           echo "plan-created=true" >> $GITHUB_OUTPUT
 
       - name: Check for uncommitted .terraform.lock.hcl changes
