--- a/.github/workflows/terraform_v1.yml
+++ b/.github/workflows/terraform_v1.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           terraform plan -var-file=dev.tfvars -out=tfplan
           echo "plan-created=true" >> $GITHUB_OUTPUT
-        working-directory: ./
+        working-directory: .
 
       - name: Check for uncommitted .terraform.lock.hcl changes
         run: |
