--- a/.github/workflows/terraform_v1.yml
+++ b/.github/workflows/terraform_v1.yml
@@ -56,7 +56,8 @@ jobs:
         run: |
           tflint --init
           tflint -f compact
-        working-directory: ./      - name: Terraform Plan
+        working-directory: ./      
+      - name: Terraform Plan
         id: plan
         run: |
           terraform plan -var-file=./dev.tfvars -out=tfplan
