--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -38,7 +38,9 @@ jobs:
         working-directory: ./
 
       - name: Terraform Format Check
-        run: terraform fmt -check -recursive
+        run: |
+           terraform fmt -check -recursive
+           terraform fmt -recursive 
         continue-on-error: false
         working-directory: ./
 
