fix: update Terraform format step to remove check flag and improve clarity

--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -37,9 +37,8 @@ jobs:
         run: terraform init
         working-directory: ./
 
-      - name: Terraform Format Check
+      - name: Terraform Format 
         run: |
-           terraform fmt -check -recursive
            terraform fmt -recursive 
         continue-on-error: false
         working-directory: ./
