--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     types: [opened, synchronize, reopened, closed]
+  workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
@@ -72,8 +73,8 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: |
-          # Use the full path to the dev.tfvars file
-          terraform plan -var-file="${GITHUB_WORKSPACE}/dev.tfvars" -out=tfplan
+          # Use the full path to the prod.tfvars file
+          terraform plan -var-file="${GITHUB_WORKSPACE}/prod.tfvars" -out=tfplan
           echo "plan-created=true" >> $GITHUB_OUTPUT
         working-directory: ./
 
@@ -166,5 +167,5 @@ jobs:
         working-directory: ./
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve -var-file="${GITHUB_WORKSPACE}/dev.tfvars"
+        run: terraform destroy -auto-approve -var-file="${GITHUB_WORKSPACE}/prod.tfvars"
         working-directory: ./
