--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -6,6 +6,15 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, closed]
   workflow_dispatch:
+    inputs:
+      action:
+        description: 'Terraform action to perform'
+        required: true
+        default: 'apply'
+        type: choice
+        options:
+          - apply
+          - destroy
 
 env:
   AWS_REGION: us-east-1
@@ -97,7 +106,8 @@ jobs:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform-plan
-    if: github.ref == 'refs/heads/main' && github.event.action != 'closed'
+    if: github.ref == 'refs/heads/main' && github.event.action != 'closed' || if: github.event.inputs.action == 'apply'
+
     environment:
       name: production
       url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
@@ -144,7 +154,7 @@ jobs:
   terraform-destroy:
     name: Terraform Destroy on PR Close
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == false && github.event.action == 'closed'
+    if: github.event.pull_request.merged == false && github.event.action == 'closed' || if: github.event.inputs.action == 'destroy'
 
     steps:
       - name: Checkout code
