--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -82,10 +82,13 @@ jobs:
         id: plan
         run: |
           # Use the full path to the prod.tfvars file
-          terraform plan -var-file="${GITHUB_WORKSPACE}/prod.tfvars" -out=tfplan
+          if [ "${{ github.event.inputs.action }}" == "destroy" ]; then
+            terraform plan -destroy -var-file="${GITHUB_WORKSPACE}/prod.tfvars" -out=tfplan
+          else
+            terraform plan -var-file="${GITHUB_WORKSPACE}/prod.tfvars" -out=tfplan
+          fi
           echo "plan-created=true" >> $GITHUB_OUTPUT
         working-directory: ./
-
       - name: Check for uncommitted .terraform.lock.hcl changes
         run: |
           if [[ -n $(git status --porcelain .terraform.lock.hcl) ]]; then
@@ -105,7 +108,7 @@ jobs:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform-plan
-    if: github.event.inputs.action == 'apply'
+    if: needs.terraform-plan.outputs.plan-created == 'true'
 
     environment:
       name: production
