--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -108,7 +108,8 @@ jobs:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: terraform-plan
-    if: needs.terraform-plan.outputs.plan-created == 'true'
+    if: needs.terraform-plan.outputs.plan-created == 'true' || github.event.inputs.action != 'destroy'
+
 
     environment:
       name: production
