--- a/.github/workflows/terraform_v2.yml
+++ b/.github/workflows/terraform_v2.yml
@@ -2,7 +2,7 @@ name: Terraform CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [main, mk-test]
   pull_request:
     types: [opened, synchronize, reopened, closed]
   workflow_dispatch:
